fix z-index mobile menu

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     }
 
     .header-line-mobile{
+      z-index: 10;
       display: none;
       background: white;
       position: fixed;
